--- a/app/src/main/res/drawable/btn_round.xml
+++ b/app/src/main/res/drawable/btn_round.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#EFF2F4" />
+    <solid android:color="#ECEFF1" />
 
 </shape>
