--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -5,7 +5,7 @@
         <shape>
             <gradient android:angle="90"
                 android:startColor="@color/colorLight"
-                android:endColor="@color/colorPrimaryDark"
+                android:endColor="@color/COLOR"
                 android:type="linear"/>
         </shape>
     </item>
