--- a/app/src/main/res/drawable/msg_send.xml
+++ b/app/src/main/res/drawable/msg_send.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimaryDark" />
+        android:color="@color/COLOR" />
 
     <solid android:color="#FFFFFF" />
     <corners
