--- a/app/src/main/res/layout/activity_admin_panel.xml
+++ b/app/src/main/res/layout/activity_admin_panel.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/btn_round"
+    android:background="@color/LightGrey"
     tools:context="project.msc.college.admin_panel">
 
     <RelativeLayout
@@ -17,24 +17,41 @@
             android:background="@drawable/gradient_background"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/college_app"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="@string/college_app"
-                android:textColor="#ffff"
-                android:textSize="22sp" />
+                android:layout_margin="15dp">
+
+                <TextView
+                    android:id="@+id/college_app"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/college_app"
+                    android:textColor="#ffff"
+                    android:textSize="22sp" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/college_app"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="end"
+                    android:onClick="logout"
+                    android:tint="@color/white"
+                    app:srcCompat="@drawable/ic_power_settings_new_black_24dp" />
+
+            </RelativeLayout>
 
             <TextView
-                android:onClick="logout"
                 android:id="@+id/logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:onClick="logout"
                 android:text="@string/logout"
                 android:textColor="#ffff"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/admin"
@@ -71,7 +88,6 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
-                app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="6dp">
 
@@ -87,7 +103,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="90dp"
                         android:text="@string/teachers"
-                        android:textColor="#000000"
+                        android:textColor="@color/Black"
                         android:textSize="28sp"
                         tools:ignore="RelativeOverlap" />
 
@@ -149,7 +165,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="90dp"
                         android:text="@string/students"
-                        android:textColor="#000000"
+                        android:textColor="@color/Black"
                         android:textSize="28sp"
                         tools:ignore="RelativeOverlap" />
 
@@ -176,13 +192,18 @@
                         android:text="@string/view_students"
                         app:cornerRadius="14dp" />
 
-                    <com.mikhaellopez.circularimageview.CircularImageView
+                    <com.google.android.material.card.MaterialCardView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="-10dp"
-                        android:contentDescription="@string/add_teacher"
-                        android:src="@drawable/round_students" />
+                        app:cardCornerRadius="100dp">
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/round_students" />
+                    </com.google.android.material.card.MaterialCardView>
 
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
