--- a/app/src/main/res/layout/activity_admin_user_editor.xml
+++ b/app/src/main/res/layout/activity_admin_user_editor.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/btn_round"
     tools:context="project.msc.college.admin_user_editor">
 
 
@@ -14,7 +13,6 @@
         android:orientation="vertical">
 
         <include layout="@layout/tollbar_layout" />
-
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -26,6 +24,7 @@
                 android:id="@+id/user_profile"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:background="@drawable/btn_round"
                 android:contentDescription="@string/profile"
                 android:src="@drawable/add_image" />
 
@@ -39,6 +38,7 @@
                 android:layout_toEndOf="@+id/user_profile"
                 android:includeFontPadding="false"
                 android:textAllCaps="true"
+                android:textColor="@color/Black"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
@@ -52,19 +52,21 @@
                 android:layout_toEndOf="@+id/user_profile"
                 android:includeFontPadding="false"
                 android:textAllCaps="true"
+                android:textColor="@color/Black"
                 android:textSize="20sp"
                 android:textStyle="normal" />
+
             <TextView
-                android:visibility="gone"
                 android:id="@+id/user_role"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:includeFontPadding="false"
                 android:textAllCaps="true"
+                android:textColor="@color/Black"
                 android:textSize="20sp"
-                android:textStyle="normal" />
-
+                android:textStyle="normal"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
@@ -80,18 +82,19 @@
                 tools:ignore="ExtraText">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_marginTop="10dp"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/icon"
-                    android:src="@drawable/ic_person_black_24dp" />
+                    android:src="@drawable/ic_person_black_24dp"
+                    android:tint="@color/Black" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    app:boxBackgroundColor="#EFF2F4">
+                    app:boxBackgroundColor="@color/txt_bg_admin">
 
                     <EditText
                         android:id="@+id/ed_fullName"
@@ -110,18 +113,19 @@
                 android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_marginTop="10dp"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/icon"
-                    android:src="@drawable/ic_enhanced_encryption_black_24dp" />
+                    android:src="@drawable/ic_enhanced_encryption_black_24dp"
+                    android:tint="@color/Black" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
-                    app:boxBackgroundColor="#EFF2F4">
+                    app:boxBackgroundColor="@color/txt_bg_admin">
 
                     <EditText
                         android:id="@+id/ed_roll"
@@ -141,11 +145,12 @@
                 android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_marginTop="10dp"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/icon"
-                    android:src="@drawable/ic_email_black_24dp" />
+                    android:src="@drawable/ic_email_black_24dp"
+                    android:tint="@color/Black" />
 
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -153,7 +158,7 @@
                     android:layout_height="wrap_content"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    app:boxBackgroundColor="#EFF2F4">
+                    app:boxBackgroundColor="@color/txt_bg_admin">
 
                     <EditText
                         android:id="@+id/ed_email"
@@ -171,11 +176,12 @@
                 android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_marginTop="10dp"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/icon"
-                    android:src="@drawable/ic_phone_black_24dp"/>
+                    android:src="@drawable/ic_phone_black_24dp"
+                    android:tint="@color/Black" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
@@ -183,7 +189,7 @@
                     android:backgroundTint="@color/white"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    app:boxBackgroundColor="#EFF2F4">
+                    app:boxBackgroundColor="@color/txt_bg_admin">
 
                     <EditText
                         android:id="@+id/ed_phone"
@@ -202,11 +208,12 @@
                 android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_marginTop="10dp"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/icon"
-                    android:src="@drawable/ic_key_black_24dp" />
+                    android:src="@drawable/ic_key_black_24dp"
+                    android:tint="@color/Black" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/user_password"
@@ -214,7 +221,7 @@
                     android:layout_height="wrap_content"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    app:boxBackgroundColor="#EFF2F4"
+                    app:boxBackgroundColor="@color/txt_bg_admin"
                     app:passwordToggleEnabled="true">
 
                     <EditText
