--- a/app/src/main/res/layout/activity_dash_notes_categories.xml
+++ b/app/src/main/res/layout/activity_dash_notes_categories.xml
@@ -1,210 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="project.msc.college.dash_notes_categories">
 
-    <include
-        layout="@layout/tollbar_layout" />
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/info_card"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:cardElevation="3dp"
-        app:layout_constraintTop_toBottomOf="@+id/toll_bar">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="20dp">
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/ic_folder_open_black_24dp" />
-
-            <TextView
-                android:id="@+id/tv_main"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tv_sem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="10dp"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                tools:ignore="RtlSymmetry" />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/info_card"
-        tools:layout_editor_absoluteX="8dp">
+        android:orientation="vertical">
+
+        <include layout="@layout/tollbar_layout" />
+
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/notes"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/info_card"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="card_notes"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:cardElevation="3dp"
+            app:layout_constraintTop_toBottomOf="@+id/toll_bar">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="16dp">
+                android:padding="20dp">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_folder_open_black_24dp"
+                    android:tint="@color/Black" />
 
                 <TextView
+                    android:id="@+id/tv_main"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_sem"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:drawableStart="@drawable/ic_folder_black_24dp"
-                    android:drawablePadding="2dp"
-                    android:text="@string/notes"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
+                    android:paddingStart="10dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    tools:ignore="RtlSymmetry" />
             </LinearLayout>
+
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/Syllabus"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="card_syllabus"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/notes">
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/info_card"
+            tools:layout_editor_absoluteX="8dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/notes"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="16dp">
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="card_notes"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:drawableStart="@drawable/ic_folder_black_24dp"
-                    android:drawablePadding="2dp"
-                    android:text="@string/syllabus"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    android:orientation="horizontal"
+                    android:padding="16dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/Practicals"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="card_practicals"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Syllabus">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:drawableStart="@drawable/ic_folder_black_24dp"
+                        android:drawablePadding="2dp"
+                        android:drawableTint="@color/Black"
+                        android:text="@string/notes"
+                        android:textColor="@color/Black"
+                        android:textSize="18sp"
+                        tools:ignore="UnusedAttribute" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/Syllabus"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="16dp">
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="card_syllabus"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/notes">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:drawableStart="@drawable/ic_folder_black_24dp"
-                    android:drawablePadding="2dp"
-                    android:text="@string/practicals"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    android:orientation="horizontal"
+                    android:padding="16dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/BlackBook"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="card_blackBook"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Practicals">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:drawableStart="@drawable/ic_folder_black_24dp"
+                        android:drawablePadding="2dp"
+                        android:drawableTint="@color/Black"
+                        android:text="@string/syllabus"
+                        android:textColor="@color/Black"
+                        android:textSize="18sp"
+                        tools:ignore="UnusedAttribute" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/Practicals"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="16dp">
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="card_practicals"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Syllabus">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:drawableStart="@drawable/ic_folder_black_24dp"
-                    android:drawablePadding="2dp"
-                    android:text="@string/blackbook"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/videoNotes"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="card_blackBook"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/BlackBook">
+                    android:orientation="horizontal"
+                    android:padding="16dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:drawableStart="@drawable/ic_folder_black_24dp"
+                        android:drawablePadding="2dp"
+                        android:drawableTint="@color/Black"
+                        android:text="@string/practicals"
+                        android:textColor="@color/Black"
+                        android:textSize="18sp"
+                        tools:ignore="UnusedAttribute" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/BlackBook"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="16dp">
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="card_blackBook"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Practicals">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:drawableStart="@drawable/ic_folder_black_24dp"
-                    android:drawablePadding="2dp"
-                    android:text="@string/videoNotes"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    android:orientation="horizontal"
+                    android:padding="16dp">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:drawableStart="@drawable/ic_folder_black_24dp"
+                        android:drawablePadding="2dp"
+                        android:drawableTint="@color/Black"
+                        android:text="@string/blackbook"
+                        android:textColor="@color/Black"
+                        android:textSize="18sp"
+                        tools:ignore="UnusedAttribute" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/videoNotes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="card_videoNotes"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/BlackBook">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:drawableStart="@drawable/ic_folder_black_24dp"
+                        android:drawablePadding="2dp"
+                        android:drawableTint="@color/Black"
+                        android:text="@string/videoNotes"
+                        android:textColor="@color/Black"
+                        android:textSize="18sp"
+                        tools:ignore="UnusedAttribute" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
