--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/btn_round"
+    android:background="@color/LightGrey"
     android:focusable="true"
     tools:context="project.msc.college.dashboard">
 
@@ -41,7 +41,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/txtName"
                     android:textColor="#ffff"
-                    android:textSize="22sp" />
+                    android:textSize="22sp"
+                    android:transitionName="name_transition" />
 
                 <TextView
                     android:id="@+id/txtField"
@@ -51,7 +52,8 @@
                     android:layout_marginTop="6dp"
                     android:text="@string/msc_it2"
                     android:textColor="#ffff"
-                    android:textSize="15sp" />
+                    android:textSize="15sp"
+                    android:transitionName="stream_transition" />
 
                 <TextView
                     android:id="@+id/logout"
@@ -75,6 +77,7 @@
                     android:contentDescription="@string/profile"
                     android:onClick="btn_profile"
                     android:src="@drawable/contact"
+                    android:transitionName="img_transition"
                     app:civ_border_width="2dp" />
             </RelativeLayout>
 
@@ -122,7 +125,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="@string/notes"
-                        android:textColor="#6f6f6f"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -160,7 +162,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="@string/website"
-                        android:textColor="#6f6f6f"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -201,7 +202,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="@string/group_chat"
-                        android:textColor="#6f6f6f"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -240,7 +240,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="@string/class_todo"
-                        android:textColor="#6f6f6f"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -279,7 +278,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="@string/events"
-                        android:textColor="#6f6f6f"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -317,7 +315,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="@string/chat_bot"
-                        android:textColor="#6f6f6f"
                         android:textSize="18sp" />
 
                 </LinearLayout>
