--- a/app/src/main/res/layout/activity_upload_files.xml
+++ b/app/src/main/res/layout/activity_upload_files.xml
@@ -54,7 +54,7 @@
             android:text="View Uploads"
             android:textAlignment="center"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/COLOR" />
 
     </LinearLayout>
 
