--- a/app/src/main/res/layout/admin_user_item.xml
+++ b/app/src/main/res/layout/admin_user_item.xml
@@ -29,6 +29,7 @@
                     android:id="@+id/user_profile"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
+                    android:background="@drawable/btn_round"
                     android:contentDescription="@string/profile"
                     android:src="@drawable/add_student" />
 
@@ -41,7 +42,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_toEndOf="@+id/user_profile"
                     android:text="@string/college_app"
-                    android:textColor="#000"
+                    android:textColor="@color/Black"
                     android:textSize="22sp" />
 
                 <TextView
@@ -125,8 +126,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/user_email"
                     android:layout_alignParentEnd="true"
-                    android:background="@drawable/btn_round"
+                    android:background="@color/LightGrey"
                     android:text="@string/college_app"
+                    android:textColor="@color/Black"
                     android:textSize="16sp" />
 
                 <RelativeLayout
@@ -137,13 +139,13 @@
                     android:layoutDirection="rtl">
 
                     <Button
-                        android:textColor="@color/colorAccent"
                         android:id="@+id/btn_user_delete"
                         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="5dp"
-                        android:text="@string/delete" />
+                        android:text="@string/delete"
+                        android:textColor="@color/colorAccent" />
 
                     <Button
                         android:id="@+id/btn_user_edit"
