--- a/app/src/main/res/layout/grp_rec_item.xml
+++ b/app/src/main/res/layout/grp_rec_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -13,18 +12,18 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="10dp"
-        app:cardUseCompatPadding="true"
-        app:cardElevation="0dp"
         app:cardBackgroundColor="@android:color/transparent"
+        app:cardElevation="0dp"
+        app:cardUseCompatPadding="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@drawable/msg_rec"
             android:orientation="vertical"
             android:paddingStart="10dp"
-            android:background="@drawable/msg_rec"
             android:paddingEnd="10dp">
 
             <LinearLayout
@@ -33,37 +32,38 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:textDirection="ltr"
                     android:id="@+id/r_name"
-                    android:textColor="#000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:text="@string/app_name"
+                    android:textColor="#000"
+                    android:textDirection="ltr"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:textDirection="ltr"
                     android:id="@+id/r_msg"
-                    android:textColor="#000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/addComment"
+                    android:textColor="#000"
+                    android:textDirection="ltr"
                     android:textSize="16sp" />
+
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/r_img"
                     android:layout_width="150dp"
-                    android:layout_height="100dp"
-                    />
+                    android:layout_height="100dp" />
 
                 <TextView
-                    android:textDirection="ltr"
                     android:id="@+id/r_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:text="@string/date"
+                    android:textColor="#555"
+                    android:textDirection="ltr"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
