--- a/app/src/main/res/layout/my_class_item.xml
+++ b/app/src/main/res/layout/my_class_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -43,35 +42,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/college_app"
-                android:textColor="#000"
+                android:textColor="@color/Black"
                 android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/person_class"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/person_name"
+                android:text="@string/college_app"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/person_roll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/person_name"
-                android:text="@string/college_app"
-                android:textSize="15sp" />
-            <TextView
-                android:id="@+id/person_class"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/person_name"
+                android:layout_toEndOf="@+id/person_class"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
-                android:layout_toEndOf="@+id/person_roll"
                 android:text="@string/college_app"
                 android:textSize="15sp" />
 
             <TextView
-                android:background="@drawable/btn_round"
                 android:id="@+id/person_role"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/person_name"
                 android:layout_alignParentEnd="true"
+                android:background="@color/LightGrey"
                 android:text="@string/college_app"
+                android:textColor="@color/Black"
                 android:textSize="15sp" />
         </RelativeLayout>
 
